=== Additional Privacy ===
Authors: Ivan Shaovchev, Andrew Billits, Andrey Shipilov (Incsub)

== Changelog ==

= 1.0.7 =
* Added new feature - "Single password" for access to blog;

= 1.0.6 =
* Fixed some problems with BP Activity stream;
* Fixed problem with access to all BP pages;

= 1.0.5 =
* added the language file;

= 1.0.4 =
* Fixed problem of display posts from private sites in BP Activity stream;

= 1.0.3 =
* Compatibility update for WordPress 3.1
* Bug fixes

= 1.0.2 =
* Allow access to xml-rpc on private blogs.

= 1.0.1 =
* Switched to wp_redirect for redirects.

= 1.0.0 =
* Initial Release