@@ -5,6 +5,7 @@ Authors: Ivan Shaovchev, Andrew Billits, Andrey Shipilov (Incsub)
 
 = 1.0.7 =
 * Added new feature - "Single password" for access to blog;
+* Added new feature - "Available options" for Network admin;
 
 = 1.0.6 =
 * Fixed some problems with BP Activity stream;
